# pete-murphy.github.io

./: .gitignore  README.md  flake.nix  justfile  slick-template.cabal
app/: Main.hs  Multicodeblock.hs  Slick.hs  Title.hs
app/Slick/: Pandoc.hs
docs/: atom.xml  index.html
docs/css/: main.css  style.css  syntax.css  theme.css  typography.css
docs/js/: image-loader.js  main.js
docs/posts/: 2018-06-08-fp-resources.html  2018-07-03-function-composition.html  2018-10-24-recursion-and-folding.html  2019-04-11-state-reducer-and-reader-applicative.html  2023-04-16-zbg-nix.html  2023-05-17-react-router-view-transitions-api.html  2023-05-30-cont-and-managed.html  2023-07-08-import-counting.html  2023-07-11-visualizing-matrix-rotation.html  cont-and-managed.html  context-vs-reader.html  data-abstraction.html  react-router-view-transitions-api.html  sample-post-tooo.html  sample-post.html
docs/tag/: algorithm.html  cont.html  context.html  data abstraction.html  fp.html  nix.html  purescript.html  react-router.html  react.html  reader.html  slick.html  typescript.html  view transitions.html
output/: atom.xml  index.html
output/css/: main.css  syntax.css  typography.css
output/js/: multicodeblock-tabs.js
output/posts/: context-vs-reader.html  data-abstraction.html  sample-post-tooo.html  sample-post.html
output/tag/: context.html  data abstraction.html  haskell.html  reader.html  site.html  slick.html
site/css/: main.css  syntax.css  theme.css  typography.css
site/js/: main.js  (+3 more)
test/: sample-post.original.md  sample-post.processed.md  sample-post.small.md
(+29 files in other folders)
