cabal-version:  3.0
name:           blog
version:        0.0.0.0
copyright:      2023
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/ptrfrncsmrph/ptrfrncsmrph.github.io/

executable build-site
  main-is: Main.hs
  other-modules:
      Multicodeblock
      Slick
      Slick.Caching
      Slick.Mustache
      Slick.Pandoc
      Slick.Shake
      Slick.Utils
      Title
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      aeson
    , base >=4.7 && <5
    , bytestring
    , containers
    , deriving-aeson
    , directory
    , extra
    , lens
    , lens-aeson
    , megaparsec
    , mustache
    , newtype
    , pandoc
--  , pandoc-emphasize-code
--  , pandoc-sidenote
    , shake
    , text
    , time
    , unordered-containers
  default-language: Haskell2010
